--- a/KorytoServiceDAL/KorytoServiceDAL.csproj
+++ b/KorytoServiceDAL/KorytoServiceDAL.csproj
@@ -42,17 +42,28 @@
   <ItemGroup>
     <Compile Include="BindingModel\CarBindingModel.cs" />
     <Compile Include="BindingModel\CarDetailBindingModel.cs" />
+    <Compile Include="BindingModel\ClientBindingModel.cs" />
     <Compile Include="BindingModel\DetailBindingModel.cs" />
     <Compile Include="BindingModel\DetailRequestBindingModel.cs" />
+    <Compile Include="BindingModel\OrderBindingModel.cs" />
+    <Compile Include="BindingModel\OrderCarBindingModel.cs" />
+    <Compile Include="BindingModel\ReportBindingModel.cs" />
     <Compile Include="BindingModel\RequestBindingModel.cs" />
     <Compile Include="Interfaces\ICarService.cs" />
+    <Compile Include="Interfaces\IClientService.cs" />
     <Compile Include="Interfaces\IDetailService.cs" />
+    <Compile Include="Interfaces\IMainService.cs" />
+    <Compile Include="Interfaces\IReportService.cs" />
     <Compile Include="Interfaces\IRequestService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\CarDetailViewModel.cs" />
     <Compile Include="ViewModel\CarViewModel.cs" />
+    <Compile Include="ViewModel\ClientOrdersViewModel.cs" />
+    <Compile Include="ViewModel\ClientViewModel.cs" />
     <Compile Include="ViewModel\DetailRequestViewModel.cs" />
     <Compile Include="ViewModel\DetailViewModel.cs" />
+    <Compile Include="ViewModel\OrderCarViewModel.cs" />
+    <Compile Include="ViewModel\OrderViewModel.cs" />
     <Compile Include="ViewModel\RequestViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
