--- a/KorytoServiceImplementDataBase/KorytoServiceImplementDataBase.csproj
+++ b/KorytoServiceImplementDataBase/KorytoServiceImplementDataBase.csproj
@@ -72,6 +72,14 @@
     <Compile Include="Migrations\201905310537333_init.Designer.cs">
       <DependentUpon>201905310537333_init.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201905310954071_migr.cs" />
+    <Compile Include="Migrations\201905310954071_migr.Designer.cs">
+      <DependentUpon>201905310954071_migr.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201905311015364_delete-tables.cs" />
+    <Compile Include="Migrations\201905311015364_delete-tables.Designer.cs">
+      <DependentUpon>201905311015364_delete-tables.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -101,6 +109,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201905310537333_init.resx">
       <DependentUpon>201905310537333_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905310954071_migr.resx">
+      <DependentUpon>201905310954071_migr.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201905311015364_delete-tables.resx">
+      <DependentUpon>201905311015364_delete-tables.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
