--- a/KorytoWeb/KorytoWeb.csproj
+++ b/KorytoWeb/KorytoWeb.csproj
@@ -137,7 +137,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
-    <Compile Include="Controllers\StatisicsController.cs" />
+    <Compile Include="Controllers\StatisticsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -192,7 +192,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\AddCar.cshtml" />
     <Content Include="Views\Order\Reserve.cshtml" />
-    <Content Include="Views\Statisics\Index.cshtml" />
+    <Content Include="Views\Statistics\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
