начат личный кабинет

--- a/KorytoWeb/KorytoWeb.csproj
+++ b/KorytoWeb/KorytoWeb.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Controllers\OrderController.cs" />
     <Compile Include="Controllers\OrdersController.cs" />
     <Compile Include="Controllers\StatisticsController.cs" />
+    <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -193,6 +194,7 @@
     <Content Include="Views\Order\AddCar.cshtml" />
     <Content Include="Views\Order\Reserve.cshtml" />
     <Content Include="Views\Statistics\Index.cshtml" />
+    <Content Include="Views\User\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
