--- a/KorytoView/KorytoView.csproj
+++ b/KorytoView/KorytoView.csproj
@@ -91,6 +91,12 @@
     <Compile Include="FormClients.designer.cs">
       <DependentUpon>FormClients.cs</DependentUpon>
     </Compile>
+    <Compile Include="FormClientStat.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FormClientStat.Designer.cs">
+      <DependentUpon>FormClientStat.cs</DependentUpon>
+    </Compile>
     <Compile Include="FormDetail.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -149,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FormClients.resx">
       <DependentUpon>FormClients.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FormClientStat.resx">
+      <DependentUpon>FormClientStat.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FormDetail.resx">
       <DependentUpon>FormDetail.cs</DependentUpon>
