--- a/KorytoServiceImplementDataBase/KorytoServiceImplementDataBase.csproj
+++ b/KorytoServiceImplementDataBase/KorytoServiceImplementDataBase.csproj
@@ -50,6 +50,8 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Entity" />
     <Reference Include="System.Data.Linq" />
