--- a/KorytoView/App.config
+++ b/KorytoView/App.config
@@ -7,6 +7,10 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
+  <appSettings>
+    <add key="MailLogin" value="deusmeme@gmail.com" />
+    <add key="MailPassword" value="antihype1488" />
+  </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
