Работа с постой в формах

--- a/KorytoView/App.config
+++ b/KorytoView/App.config
@@ -8,8 +8,8 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
   </startup>
   <appSettings>
-    <add key="MailLogin" value="deusmeme@gmail.com" />
-    <add key="MailPassword" value="antihype1488" />
+    <add key="MailLogin" value="kuzikuzikuzikuzi33@gmail.com" />
+    <add key="MailPassword" value="toster123456" />
   </appSettings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
