--- a/KorytoServiceDAL/KorytoServiceDAL.csproj
+++ b/KorytoServiceDAL/KorytoServiceDAL.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Interfaces\IRequestService.cs" />
     <Compile Include="Interfaces\IStatisticService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\CarCountViewModel.cs" />
     <Compile Include="ViewModel\CarDetailViewModel.cs" />
     <Compile Include="ViewModel\CarViewModel.cs" />
     <Compile Include="ViewModel\ClientOrdersViewModel.cs" />
@@ -72,6 +73,7 @@
     <Compile Include="ViewModel\OrderViewModel.cs" />
     <Compile Include="ViewModel\RequestLoadViewModel.cs" />
     <Compile Include="ViewModel\RequestViewModel.cs" />
+    <Compile Include="ViewModel\StatisticViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\KorytoModel\KorytoModel.csproj">
